--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,12 @@
   color: #888;
 }
 
+img {
+  position: relative;
+  left: 20%;
+  width: 200px;
+  height: 400px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
